# classif_images_pytorch

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  train_classifier.py
